packages/draftapp/draftapp-0.1.4.tar.gz/draftapp-0.1.4/draftapp/conf/project_template_advanced/kubernetes_manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: application-ingress
  annotations:
    'kubernetes.io/ingress.class': 'nginx'
spec:
 rules:
 - host: <host_name_here>
   http:
     paths:
     - path: /application/api
       backend:
         serviceName: application-service
         servicePort: 5000
